[Samples] fix overflow in select for themes

--- a/examples/app/app.component.scss
+++ b/examples/app/app.component.scss
@@ -20,10 +20,15 @@
 
 ::ng-deep .mat-toolbar .mat-select-value {
     color: #fff !important;
+    text-align: end !important;
 }
 
 ::ng-deep .mat-form-field-underline {
     display: none !important;
+}
+
+::ng-deep .mat-input-infix {
+    width: 200px;
 }
 
 .router {
